fix: img talents and comp align

--- a/styleguia.css
+++ b/styleguia.css
@@ -1786,3 +1786,15 @@ table th {
 .faq h3 {
     margin-bottom: 10px;
 }
+
+.comp-empty-slot {
+    width: 60px;
+    height: 60px;
+}
+
+@media (max-width: 360px) {
+    .comp-empty-slot {
+        width: 50px;
+        height: 50px;
+    }
+}
